# glide-ng-alpha

./: CMakeLists.txt
.agents/: AGENTS.md
.agents/skills/3dfx-expert/: SKILL.md
.agents/skills/gles-expert/: SKILL.md
.agents/skills/rasterizer-oracle/: SKILL.md
.agents/skills/visual-validator/: SKILL.md
.agents/skills/vulkan-expert/: SKILL.md
demos/: CMakeLists.txt  capture_showcase.sh  chromakey_range_demo.cpp  fog_showcase_demo.cpp  gamma_showcase_demo.cpp  glide2_compat_demo.cpp  glide3_extensions_demo.cpp  glide3_state_demo.cpp  large_texture_showcase.cpp  perspective_mipmapping_showcase.cpp  phase1_validation_demo.cpp  phase2_validation_demo.cpp  phase4_showcase.cpp  run_mipmap_comparison.sh  splash_showcase_demo.cpp  test10_replica_demo.cpp  test12_replica_demo.cpp
include/3dfx/: 3dfx.h
include/glide2/: glide.h
src/: CMakeLists.txt
src/backends/: SoftwareBackendBase.cpp  SoftwareBackendBase.h
src/backends/opengl_es/: OpenGLESBackend.cpp  OpenGLESBackend.h
src/backends/software/: RasterizerState.h  SimdVec.h  SoftwareBackend.cpp  SoftwareBackend.h  ThreadPool.h
src/backends/vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanShaders.h
src/backends/vulkan/shaders/: color.frag  color.vert  color_dualsrc.frag  color_frag.spv.h  color_vert.spv.h
src/core/: 3dfParser.cpp  3dfParser.h  BackendManager.cpp  BackendManager.h  EmbeddedAssets.cpp  EmbeddedAssets.h  GlideSplashAnimator.cpp  GlideSplashAnimator.h  IConfigLoader.h  IGraphicsBackend.h  ISplashAnimator.h  JsonConfigLoader.cpp  JsonConfigLoader.h  LfbManager.cpp  LfbManager.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  PlatformWindowUtils.cpp  PlatformWindowUtils.h  Telemetry.cpp  Telemetry.h  TextureManager.cpp  TextureManager.h  VertexLayout.cpp  VertexLayout.h  WrapperConfig.cpp  WrapperConfig.h
src/glide2/: glide2_entry.cpp
src/glide3/: glide3_entry.cpp
tools/: CMakeLists.txt  DiagnosticInfo.cpp  DiagnosticInfo.h  glide_info.cpp  spv_to_hex.py  tlib.h  tlib_compat.cpp
tools/glidecube/: CMakeLists.txt  glidecube.cpp
tools/glidegears/: CMakeLists.txt  glidegears.cpp
tools/snake/: CMakeLists.txt  snake_no_inject_sdl12.cpp  snake_no_inject_sdl2.cpp  snake_sdl12.cpp  snake_sdl2.cpp  verify_scenarios.sh
